--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,10 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
 
+    - name: Reformat code with Black
+      run: |
+        black .
+    
     - name: Check code formatting with black
       run: |
         black --check --diff .
