Change vosk dir to volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,9 @@ services:
       # Alternative audio device access
       - /dev/snd:/dev/snd:rw
       - /home/${USER}/.Xauthority:/home/${USER}/.Xauthority:rw
-      # Vosk model persistence directory
-      - ./vosk-models:/models:rw
+      # Vosk model persistence directory (now as a named volume). Also need to chmow in host OS (since this container runs as non-root user):
+      # `sudo chown -R $(id -u):$(id -g) /var/lib/docker/volumes/ubuntu_voice_to_text_vosk-models/_data`
+      - vosk-models:/models:rw
     devices:
       # Audio devices
       - /dev/snd:/dev/snd
@@ -44,7 +45,7 @@ services:
     profiles:
       - test
 
-  # Lint runner service  
+  # Lint runner service
   lint:
     build:
       context: .
@@ -96,3 +97,7 @@ services:
     restart: unless-stopped
     profiles:
       - ubuntu  # Only start when explicitly requested
+
+volumes:
+  vosk-models:
+    driver: local
