--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ pynput = "^1.7.6"
 pystray = "^0.19.5"
 pillow = "^9.4.0"
 sounddevice = "^0.4.6"
-openai = "^0.27.0"
+openai = ">=1.0.0"
+numpy = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
