--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        INSTALL_DEV_DEPS: "true"
     container_name: ubuntu-voice-to-text-test
     command: ["test"]
     volumes:
